# openai-rs

./: CONTRIBUTING.md  Cargo.toml  GUIDE.md  LICENSE  README.md  artitacture.md
.cursor/rules/: 01-project-overview.mdc  02-module-structure.mdc  02-project-structure.mdc  03-development-guidelines.mdc  04-context7-mcp-documentation.mdc
.devcontainer/: Dockerfile  devcontainer.json
app/: Cargo.toml
app/src/: conversation.rs
binary/: Cargo.toml
binary/src/: main.rs
core/: Cargo.toml
core/src/: context.rs  event.rs  forwarder.rs  lib.rs  mod.rs  modifier.rs  openai_types.rs  parser.rs  processor.rs  sse.rs  token_provider.rs
core/src/client_provider/: mod.rs  static_client.rs
core/src/event/: event_type.rs  metadata.rs  mod.rs
core/src/openai_types/: chat.rs  common.rs  function.rs  mod.rs  stream.rs
core/src/parser/: json_parser.rs  mod.rs
core/src/processor/: mod.rs  processor_chain.rs
core/src/processor_chain/: mod.rs
core/src/sse_provider/: default_sse.rs  mod.rs
core/src/token_provider/: mod.rs  static_token.rs
core/src/url_provider/: mod.rs  static_url.rs
docs/: ARCHITECTURE.md  IMPLEMENTING_PROVIDERS.md  examples.md
domain/: Cargo.toml
domain/src/: lib.rs
domain/src/event/: models.rs
domain/src/processor/: models.rs
domain/src/stream/: models.rs
domain/src/token/: models.rs
infra/: Cargo.toml
infra/src/: dispatcher.rs  lib.rs  token_vault.rs
interface/: Cargo.toml
interface/src/: http_handler.rs  lib.rs
llm-proxy-core/: ARCHITECTURE.md  Cargo.toml  IMPLEMENTING_PROVIDERS.md  examples.md
llm-proxy-core/src/: error.rs  lib.rs  pipeline.rs  traits.rs  types.rs
llm-proxy-core/src/traits/: client.rs  processor.rs  request.rs
llm-proxy-openai/: Cargo.toml
llm-proxy-openai/src/: client.rs  lib.rs  providers.rs  types.rs
llm-proxy-server/: Cargo.toml  config.example.toml
llm-proxy-server/src/: app.rs  config.rs  lib.rs  main.rs
script/: main.py  test.sh
server/: Cargo.toml
server/src/: main.rs
