[workspace.lints]

[workspace]
resolver = "2"
members = ["domain", "app", "infra", "interface", "binary"]

[workspace.dependencies]
# Runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
tokio-stream = "0.1"                           # Added for stream processing
futures-util = { version = "0.3" }             # Ensure stream feature is enabled

# http client
reqwest = { version = "0.12.15", features = [
    "json",
    "stream",
] } # Features for working with JSON, streaming, and byte handling

# Byte handling
bytes = "1.4"

# JSON serialization/deserialization
serde = { version = "1.0.219", features = ["derive", "serde_derive"] }
serde_json = { version = "1.0.140" }

# Error handling
anyhow = "1.0"

# Web framework
actix-web = "4"

# Logging
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = ["fmt", "time"] }
env_logger = "0.11"

# Time handling
chrono = "0.4"
