[package]
name = "core"
version = "0.1.0"
edition = "2024"


[dependencies]
async-trait = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true } # Added for stream processing
futures-util = { workspace = true } # Ensure stream feature is enabled
reqwest = { workspace = true }      # Ensure stream feature is enabled
bytes = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true } # Updated to use workspace
derive_builder = "0.20.2"
futures = "0.3"

# Tracing dependencies
tracing = { workspace = true }
tracing-futures = { version = "0.2", features = ["futures-03"] }
uuid = { version = "1.7.0", features = ["v4"] }
