[package]
name = "domain"
version = "0.1.0"
edition = "2021"

[dependencies]
# Runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures-util = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Time handling
chrono = "0.4"

# Logging
tracing = { workspace = true }
