[package]
name = "llm-proxy-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Runtime
tokio = { workspace = true }
async-trait = { workspace = true }
tokio-stream = { workspace = true }
futures-util = { workspace = true }

# Error handling
anyhow = { workspace = true }

# JSON serialization/deserialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }

# Utils
bytes = { workspace = true }
uuid = { workspace = true }

reqwest = { workspace = true }

[lints]
workspace = true
