[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
core = { path = "../core" } # Reference the core crate in the workspace

actix-web = { workspace = true }    # Use version from workspace if possible, or specify
reqwest = { workspace = true }      # Use version from workspace if possible, or specify
serde_json = { workspace = true }   # Use version from workspace if possible, or specify
env_logger = "0.11"                 # Or use tracing/tracing-subscriber if preferred
anyhow = "1.0"                      # For error handling if needed directly here
tokio = { workspace = true }        # Needed for actix_web::main
futures-util = { workspace = true }
tokio-stream = { workspace = true }

# Tracing dependencies
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing-futures = { version = "0.2", features = ["futures-03"] }
tracing-actix-web = "0.7"
